assets/css/product-card.css
/* ... */
@media (min-width: 1201px) {
  .offer-widget,
  .offer-btns {
    margin-left: 0;
  }
  .offer-widget {
    margin-top: 46px;
    max-width: 535px;
    padding: 44px 28px 30px;
  }
  .offer-widget:has([data-out-of-stock]) {
    padding: 34px 38px 30px;
  }
  .pricing[data-out-of-stock] {
    padding-top: 58px;
  }
  .pricing del {
    font-size: 32px;
    transform: translateX(-100%);
  }
  .pricing del .price-whole {
    font-size: 54px;
  }
  .pricing strong {
    font-size: 50px;
  }
  [data-out-of-stock] strong {
    font-size: 32px;
  }
  .pricing strong .price-whole {
    font-size: 84px;
  }
  [data-out-of-stock] strong .price-whole {
    font-size: 54px;
  }
  [data-out-of-stock]::after,
  [data-out-of-stock]::before {
    font-size: 32px;
  }
  .offer-form fieldset {
    padding-top: 46px;
  }
  .offer-form fieldset label {
    font-size: 16px;
  }
  .offer-form fieldset input {
    font-size: 32px;
    padding: 14px 26px;
  }
  .offer-form .coupon-field {
    width: 54%;
    margin-right: calc(16% - 8px) !important;
  }
  .coupon-btn svg {
    width: 55px;
    height: auto;
  }
  .quantity-field-input button {
    padding: 16px;
  }
  .offer-btns {
    margin-top: 42px;
  }
  .offer-btns button {
    height: 68px;
    border-radius: 40px;
  }
}
/* =========== Product details =========== */
.product-details h2 {
  padding: 26px 0 18px;
}
.product-details .product-details-nav ul {
  list-style: none;
  padding: 0;
  text-align: center;
  padding: 40px 0 40px;
  border-bottom: 1px solid #8b91a0;
  margin-bottom: 30px;
}
.product-details-nav ul li {
  font-size: 14px;
  font-weight: 600;
}
.product-details-nav ul li:not(:first-child) {
  margin-top: 20px;
}
.product-details .lead-image-wrapper {
  display: none;
}
.product-details ul {
  font-size: 14px;
  font-weight: 300;
  line-height: 1.1;
  padding-left: 26px;
}
.product-details ul strong {
  font-weight: 600;
}
.product-details ul li {
  margin-bottom: 8px;
}
.product-details table {
  border-collapse: collapse;
  table-layout: fixed;
  width: 100%;
  margin: 10px 0 20px;
  text-align: left;
}
.product-details table th,
.product-details table td {
  border-right: 2px solid white;
  margin: 0;
  padding: 16px 22px;
  vertical-align: top;
}
.product-details table th {
  font-size: 10px;
  font-weight: 600;
}
.product-details table td {
  font-size: 10px;
}
.product-details table tr:first-child th:first-child {
  border-top-left-radius: 30px;
}
.product-details table tr:first-child td:last-child {
  border-top-right-radius: 30px;
}
.product-details table tr:last-child th:first-child {
  border-bottom-left-radius: 30px;
}
.product-details table tr:last-child td:last-child {
  border-bottom-right-radius: 30px;
}
.product-details table tr:nth-child(odd) th {
  background-color: rgb(255, 204, 129, 0.5);
}
.product-details table tr:nth-child(even) th {
  background-color: #ffcc81;
}
.product-details table tr:nth-child(odd) td {
  background-color: rgb(231, 231, 237, 0.5);
}
.product-details table tr:nth-child(even) td {
  background-color: #e7e7ed;
}
@media (min-width: 768px) {
  .product-details .product-details-nav {
    margin-top: 54px;
  }
  .product-details .product-details-nav ul {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-bottom: 24px;
    margin-bottom: 40px;
  }
  .product-details-nav ul li:not(:first-child) {
    margin-top: 0;
  }
  .product-details ul {
    font-size: 16px;
  }
  .product-details ul li {
    font-size: 16px;
    margin-bottom: 12px;
  }
  .product-details table {
    margin: 20px 0 40px;
  }
  .product-details table tr:first-child th:first-child {
    border-top-left-radius: 40px;
  }
  .product-details table tr:first-child td:last-child {
    border-top-right-radius: 40px;
  }
  .product-details table tr:last-child th:first-child {
    border-bottom-left-radius: 40px;
  }
  .product-details table tr:last-child td:last-child {
    border-bottom-right-radius: 40px;
  }
  .product-details table th,
  .product-details table td {
    font-size: 12px;
  }
  .product-details table th {
    width: 33%;
    padding: 24px;
    padding-left: 60px;
  }
  .product-details table td {
    padding: 24px;
  }
}

@media (min-width: 1201px) {
  .article.container {
    padding: 0;
    margin: 0 133px;
  }
  .article {
    display: flex;
    justify-content: space-between;
    position: relative;
  }
  .product-details-right {
    width: 40%;
    position: sticky;
    top: 50px;
    align-self: flex-start;
    padding-bottom: 50px;
  }

  .product-details .lead-image-wrapper {
    display: flex;
  }
  .product-details-right .lead-image-wrapper {
    display: none;
  }
  .product-details {
    width: 54%;
    order: -1;
  }
  .product-details .product-details-nav {
    margin-top: 74px;
  }
  .product-details .product-details-nav ul {
    padding-bottom: 40px;
  }
  .product-details ul li {
    font-size: 22px;
  }
  .product-details table th,
  .product-details table td {
    font-size: 16px;
    padding: 28px;
  }
  .product-details table th {
    padding-left: 60px;
  }
}

